k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dev-svc
  namespace: env-dev
spec:
  selector:
    app: dept-dev
  ports:
    - protocol: TCP
      port: 2000
      targetPort: 3000
