k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dev
  namespace: env-dev
spec:
  rules:
  - host: smart.example.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dev-svc
            port: 
              number: 80
